- 0.7.3

    Bug fixed: .svn and CVS folders could be created when you Update
    Everything.

    New feature: New version of addhrefs.py version 0.9.2.

    New feature: QuickAddIssue now shows the spambot prevention if
    switched on. Real#0343
    
    Bug fixed: Redirecting out on duplicate status change would cause
    a TypeError. This happens when two people simultaneuously for
    example Take an issue. 
    
    Bug fixed: Change user details didn't work when you're not logged
    in as a CMF user.
    
    Bug fixed: ShowIssueData template mixed up ShowIssueURLOption with
    ShowConfidentialOption. Thanks Peter Eddy. Real#0332
    
    Bug fixed: Edit notifyable error. Real#0320
    
    New feature: Ability to enable a spambot prevention technique to
    assert that posters are humans. 
    (see Properties->Advanced->Enable spambot prevention)
    
    Bug fixed: When using IssueTrackerProduct on top of Plone the
    authenticated member was selected incorrectly. Thanks Greg Baker
    (Real#0315)
    
    Bug fixed: get_cookie() typo should have been self.get_cookie().
    Thanks Greg Baker (Real#0312)
    
    Bug fixed: Javascript autorefresh didn't work with URLs ending in
    'index_html'. Thanks Maheshg Real#0298
    
    Bug fixed: Odd emails with ISO-8859 encoding that aren't really
    ISO-8859 encoded could cause a TypeError. Thanks Mirco Attocchi
    Real#0300.
    
    Bug fixed: POP3 email parsing could fail if email didn't have a
    message-id.
    
    New feature: "Select all" button on the Spam protection page.

    Bug fixed: Bug in saving of spam keywords on duplicate keywords
    across combinations fixed.
    
    Bug fixed: Not possible to change an issues Confidential status
    through the "change details" form even if Confidential option was
    enabled. Real#0281
    
- 0.7.2

    Bug fixed: Nasty bug in name/email gets blanked on issue
    submission even the issuetracker remembers the users name as part