@@ -126,6 +126,7 @@ DEFAULT_USE_ESTIMATED_TIME = False
 DEFAULT_USE_ACTUAL_TIME = False
 DEFAULT_INCLUDE_DESCRIPTION_IN_NOTIFICATIONS = False
 DEFAULT_USE_TELLAFRIEND = True
+DEFAULT_USE_TELLAFRIEND_FOR_ANONYMOUS = True
 DEFAULT_SHOW_DATES_CLEVERLY = False
 DEFAULT_SHOW_SPAMBOT_PREVENTION = False
 DEFAULT_SPAM_KEYWORDS = ['poker-stadium.com',
